# theSearchers

./: .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/input/: CMakeLists.txt  inputHandler.cpp  inputHandler.hpp
src/readfile/: CMakeLists.txt  file_handler.cpp  file_handler.hpp
src/regex/: CMakeLists.txt  eval.cpp  eval.hpp
test/: CMakeLists.txt  testinHandler.cpp
